1998-09-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (overlap_p): Pass parent as second argument compare
	with child before accepting.
	(check_for_overlaps): Rename unmappedWindows and unmappedCount to
	overlapWindows, and overlapCount.
	(get_top_level_window): New function.
	(tkobjc_pixmap_create_from_widget): Use get_top_level_window, and
	use it for all WM-related things.  Do keep_inside_screen,
	Tk_RestackWindow within override_redirect.  Temporarily map
	toplevel window for snapshot (for WMs with virtual desktops).  Use
	Visibility binding in Tk to set an obscured flag if restacking
	didn't not result in a clean display.  If that happens, retry the
	restacking after unmapping all the overlapWindows (and undo when
	finished with snapshot).  Undo Tk Visibility binding when done.
	Copy keep_inside_screen and Tk_RestackWindow to win32 version.
	Add Configure binding to set obscured, since Visibility 
	doesn't seem to get send if a move occurs while already 
	underneath a window being kept on top by the window manager.

1998-09-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (overlap_p, check_for_overlaps): New functions.
	(tkobjc_pixmap_create_from_widget): Save override_redirect flag,
	check for visible, depth > 0 windows with overlapping areas,
	then for each set override_redirect, and unmap.
	Then flush, take a snapshot, and for each remap and restore
	its override_redirect.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.[ch] (dib_snapshot): Add windowDCFlag.  When
	set, use whole window DC, not just contents.

	* internal.m (tkobjc_pixmap_save): palbuf needs same scope as
	row_pointers.
	(keep_inside_screen): Change usage from widget to tkwin and window
	arguments (latter serves to distinguish parent from non-parent
	snapshots).  Compute relocation to ensure enough is visible for
	parent case.
	(win32_pixmap_create_from_window): Change usage to take Window,